@@ -93,6 +93,7 @@ t/85_vhier.t
 t/85_vhier_cells.out
 t/85_vhier_inpfiles.out
 t/85_vhier_modfiles.out
+t/85_vhier_topmodule.out
 t/test_utils.pl
 Verilog-Perl.pod
 verilog/example.v
